--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "react-timeline",
-  "version": "0.0.0",
-  "description": "A react component for per day events",
+  "name": "react-webpack-seed",
+  "version": "1.0.0",
+  "description": "A bare minimum react seed with webpack, es6 and lint.",
   "main": "index.js",
   "scripts": {
+    "start" : "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Karthik Rana",
   "license": "ISC",
   "dependencies": {
     "babel-polyfill": "^6.7.2",
@@ -25,10 +26,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/rana3012/react-timeline.git"
+    "url": "https://github.com/rana3012/react-webpack-seed.git"
   },
   "bugs": {
-    "url": "https://github.com/rana3012/react-timeline/issues"
+    "url": "https://github.com/rana3012/react-webpack-seed.git"
   },
-  "homepage": "https://github.com/rana3012/react-timeline#readme"
+  "homepage": "https://github.com/rana3012/react-webpack-seed.git#readme"
 }
